--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,6 +4,8 @@
 [user]
     name = Steven Comyn
     email = steven.comyn@saker.io
+[commit]
+    template = ~/.gitmessage
 [core]
     editor = vim
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
