--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
     name = Steven Comyn
     email = steven.comyn@saker.io
 [commit]
-    template = ~/.gitmessage
+    template = ~/.gitconfig.d/.gitmessage
 [core]
     editor = vim
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
